--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-Config.jsx
+config
 
 # dependencies
 /node_modules
