--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.15.6",
     "axios": "^0.21.1",
+    "express": "^4.18.0",
     "formik": "^2.2.8",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
@@ -50,5 +51,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
