--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/material": "^5.6.3",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -24,12 +25,10 @@
     "react-file-base64": "^1.0.3",
     "react-player": "^2.10.0",
     "react-rating-stars-component": "^2.2.0",
-    "react-redux": "^7.2.4",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
-    "redux-promise": "^0.6.0",
-    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
